--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@types/d3": "^7.4.3",
 		"chart.js": "^4.4.1",
+		"d3": "^7.8.5",
 		"svelte-chartjs": "^3.1.5"
 	}
 }
